--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -25,5 +25,23 @@
         ]
       }
     }
+  },
+  "api": {
+    "instapost": {
+      "service": "AppSync",
+      "providerPlugin": "awscloudformation",
+      "output": {
+        "authConfig": {
+          "defaultAuthentication": {
+            "authenticationType": "API_KEY",
+            "apiKeyConfig": {
+              "apiKeyExpirationDays": 7,
+              "description": "instapost"
+            }
+          },
+          "additionalAuthenticationProviders": []
+        }
+      }
+    }
   }
 }
