Add: ASW S3 and implement MyPage profile upload/fetch

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -43,5 +43,11 @@
         }
       }
     }
+  },
+  "storage": {
+    "instapostimgstorage": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation"
+    }
   }
 }
